Change mobile cutoff to avoid small desktop planner

--- a/site/src/globals.scss
+++ b/site/src/globals.scss
@@ -42,7 +42,7 @@
   --border-secondary: rgba(255, 255, 255, 0.12);
 }
 
-$mobile-cutoff: 800px;
+$mobile-cutoff: 840px;
 $roadmap-toolbar-height: 60px;
 
 $roadmap-sidebar-width: 368px;
